--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.15.4",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
